--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <li><a href="#conversor" class="nav-item">Conversores</a></li>
                 <li><a href="#tutorial" class="nav-item">Tutorial</a></li>
-                <li><a href="" class="nav-item">si</a></li>
+                <!-- <li><a href="" class="nav-item">si</a></li> -->
                 <li><a href="#integrantes" class="nav-item">Integrantes</a></li>
                 
                 
