--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversores</title>
+    <link rel="shortcut icon" href="./img/math.png" type="image/x-icon">
 
     <script src="https://kit.fontawesome.com/8959affc19.js" crossorigin="anonymous"></script>
 
