--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="" class="nav-logo">
                 <img src="./img/math.png" alt="">
                 <div>
-                    Conversor Mate
+                    Pajina nopor
                 </div>
             </a>
 
@@ -70,7 +70,7 @@
     <section class="conversor-container vertical-padding horizontal-padding">
         
             <div class="conversor-container-title">
-                <h1 class="title">Conversores Mate</h1>
+                <h1 class="title">Pajina nopor</h1>
                 <p>Estos son los convrsores que mi equipo y yo hicimos</p>
             </div>
 
