--- a/index.html
+++ b/index.html
@@ -355,8 +355,7 @@
                 <!-- <p class="conversor-tutorial-text">se hce asi de esta forma sum hexa</p> -->
                 <p class="conversor-tutorial-text">La suma se realiza directamente con números hexadecimales, pero se debe tomar en cuenta que del 0 al 9 equivalen lo mismo, pero de 10 al 15 éstos cambian por las letras de alfabeto de la A a la F.</p>
                 <p class="conversor-tutorial-text">
-                Nota. En caso que la suma exceda la base del sistema (16), se escribe el  resultado y  se  le  restan 16,  se  coloca un acarreo en la  siguiente columna, el valor del acarreo depende de las veces que haya superado la base del sistema y el valor que se obtiene de la resta se coloca debajo de la siguiente columna. 
-            </p>
+                Nota. En caso que la suma exceda la base del sistema (16), se escribe el  resultado y  se  le  restan 16,  se  coloca un acarreo en la  siguiente columna, el valor del acarreo depende de las veces que haya superado la base del sistema y el valor que se obtiene de la resta se coloca debajo de la siguiente columna.</p>
 
                 <p class="conversor-tutorial-text">
                 Ejemplo:</p>
