julio name added

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <li class="integrantes-item">Jennifer alessandra Romero Domínguez</li>
                 <li class="integrantes-item">Yessly Mayorga Puentes</li>
                 <li class="integrantes-item">Omar Alejandro Carrillo Correa</li>
-                <li class="integrantes-item">YO</li>
+                <li class="integrantes-item">Julio Antonio Jacinto Cruz</li>
             </ul>
             <p class="integrantes-text">Con la finalidad de</p>
 
