--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <li class="integrantes-item">Omar Alejandro Carrillo Correa</li>
                 <li class="integrantes-item">Julio Antonio Jacinto Cruz</li>
             </ul>
-            <p class="integrantes-text">Con la finalidad de</p>
+            <p class="integrantes-text">Con la finalidad de implementar el conocimiento aprendido en Matemáticas Discretas y el uso de los programas orientados a números, así como profundizar el desarrollo de acciones mediante sistemas numéricos.</p>
 
     </section>
    
