--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="conversor-buttons">
                 <p>¿Que conversor quieres usar?</p>
 
-                <div class="conversor-buttons-options">
+                <div class="conversor-buttons-options"  id="conversor">
                     
                     <a href="#conversor-1"><button class="conversor-button binario-decimal">Binario y Decimal</button></a>
                     <a href="#conversor-2"><button class="conversor-button decimal-hexadecimal">Decimal y Hexadecimal</button></a>
@@ -89,7 +89,7 @@
         
 
 
-        <div class="conversor" id="conversor">
+        <div class="conversor">
             <div class="conversor-1" id="conversor-1">
                 <p class="conversor-title">Binario y Decimal    
                     <!-- <div class="conversor-title-line"></div> -->
