--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
             <div class="conversor-container-title">
                 <h1 class="title">Conversores Mate</h1>
-                <p>Estos son los convrsores que mi equipo y yo hicimos</p>
+                <p>Estos son los conversores que mi equipo y yo hicimos, de la clase de Matemáticas Discretas</p>
             </div>
 
             <div class="conversor-buttons">
