--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <!-- <div class="conversor-title-line"></div> -->
                 </p>
                 <div class="conversor-options">
-                    <a href="#conversor-1"><button class="conversor-button op1" id="conversor-1">Binario a Decimal</button></a>
-                    <a href="#conversor-1"><button class="conversor-button op2">Decimal a Binario</button></a>
+                    <a href="#conversor-1-op"><button class="conversor-button op1" id="conversor-1-op">Binario a Decimal</button></a>
+                    <a href="#conversor-1-op"><button class="conversor-button op2">Decimal a Binario</button></a>
                 </div>
 
                 <div class="conversor-op1 conversor-item-list">
@@ -144,8 +144,8 @@
             <div class="conversor-2" id="conversor-2">
                 <p class="conversor-title">Decimal y Hexadecimal</p>
                 <div class="conversor-options">
-                    <a href="#conversor-2"><button class="conversor-button op1" id="conversor-2">Decimal a Hexadecimal</button></a>
-                    <a href="#conversor-2"><button class="conversor-button op2">Hexadecimal a Decimal</button></a>
+                    <a href="#conversor-2-op"><button class="conversor-button op1" id="conversor-2-op">Decimal a Hexadecimal</button></a>
+                    <a href="#conversor-2-op"><button class="conversor-button op2">Hexadecimal a Decimal</button></a>
                 </div>
 
                 <div class="conversor-op1 conversor-item-list">
@@ -200,8 +200,8 @@
             <div class="conversor-3" id="conversor-3">
                 <p class="conversor-title">Hexadecimal y Binario</p>
                 <div class="conversor-options">
-                    <a href="#conversor-3"><button class="conversor-button op1" id="conversor-3">Hexadecimal a Binario</button></a>
-                    <a href="#conversor-3"><button class="conversor-button op2">Binario a Hexadecimal</button></a>
+                    <a href="#conversor-3-op"><button class="conversor-button op1" id="conversor-3-op">Hexadecimal a Binario</button></a>
+                    <a href="#conversor-3-op"><button class="conversor-button op2">Binario a Hexadecimal</button></a>
                 </div>
 
                 <div class="conversor-op1 conversor-item-list">
