--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
            
 
-            <a href="" class="nav-logo">
+            <a href="#" class="nav-logo">
                 <img src="./img/math.png" alt="">
                 <div>
                     Conversor Mate
