--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                     <p class="conversor-tutorial-text subtitulo">Hexadecimal a Binario</p>
 
-                    <p class="conversor-tutorial-text">Pasar el número hexadecimal 98A1 al sistema binario./p>
+                    <p class="conversor-tutorial-text">Pasar el número hexadecimal 98A1 al sistema binario.</p>
                     <p class="conversor-tutorial-text"><img src="./img/hexaToBin1.png" alt=""></p>
                     <p class="conversor-tutorial-text">Resultado: 1001100010100001</p>
                     
